// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addIntoWatch expired 1`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "terminate",
    },
  ],
]
`;

exports[`addIntoWatch no signed order fillable 1`] = `
Array [
  Array [
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`addIntoWatch no signed order fillable 2`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`addIntoWatch no signed order fillable 3`] = `
Object {
  "orderHash": Object {
    "pair": "pair",
    "signedOrder": Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  },
}
`;

exports[`addIntoWatch with signed order fillable 1`] = `
Array [
  Array [
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`addIntoWatch with signed order fillable 2`] = `
Object {
  "orderHash": Object {
    "pair": "pair",
    "signedOrder": Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  },
}
`;

exports[`addIntoWatch with signed order non fillable 1`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "balance",
    },
  ],
]
`;

exports[`handle orderUpdate add 1`] = `
Array [
  Array [
    Object {
      "orderHash": "0xOrderHash",
    },
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`handle orderUpdate terminate 1`] = `
Array [
  Array [
    "0xOrderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerAllowance 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerAllowance 2`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "balance",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerBalance 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerBalance 2`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "balance",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderCancelled 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderCancelled 2`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "terminate",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderFillExpired 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderFillExpired 2`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "terminate",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderFillRoundingError 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderFillRoundingError 2`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "fill",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderRemainingFillAmountZero 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderRemainingFillAmountZero 2`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "fill",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid balance plus fill less than orignial amount 1`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "balance",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid balance plus fill less than orignial amount 2`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`loadOrders 1`] = `
Array [
  Array [
    Object {},
  ],
  Array [
    Object {},
  ],
]
`;

exports[`loadOrders 2`] = `
Array [
  Array [
    "orderHash3",
  ],
]
`;

exports[`loadOrders 3`] = `
Array [
  Array [
    "pair1",
  ],
  Array [
    "pair2",
  ],
]
`;

exports[`remove from watch, exisitng order 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`updateOrder isValid no userOrder 1`] = `
Array [
  Array [
    Object {
      "fill": 123,
      "method": "method",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "status",
    },
  ],
]
`;

exports[`updateOrder isValid no userOrder 2`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`updateOrder isValid userOrder 1`] = `
Array [
  Array [
    Object {
      "fill": 123,
      "method": "method",
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "status",
    },
  ],
]
`;
